--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+#Alteração cor console
+spring.output.ansi.enabled=ALWAYS
 
+#configuração banco de dados
+spring.datasource.url=jdbc:mysql://localhost:3307/investimento
+spring.datasource.password=1234
+spring.datasource.username=investimento
+
+#comando de comportamento do Hibernate
+spring.jpa.hibernate.ddl-auto=update
+
+#configuração para mostrar SQL executando pelo Hibernate
+spring.jpa.show-sql=true
